2008-05-18  Albert Lee  <trisk@acm.jhu.edu>

	* SFEwine.spec: Add patch4
	* patches/wine-04-event-completion.diff: Use Event Completion framework
	  instead of poll(2) - fixes wineserver CPU usage

2008-05-18  Thomas Wagner  <tom68@users.sourceforge.net>

	* SFEscalpel.spec: *NEW* fast file carver which extracts
            files from a set of image files or raw device files.

2008-05-18  Ananth Shrinivas <ananth@sun.com>

	* SFEpython-sqlobject.spec: *NEW* A Python ORM

2008-05-17  River Tarnell  <river@wikimedia.org>

	* SFEmutt.spec: 1.5.18

2008-05-17  Ananth Shrinivas <ananth@sun.com>

	* SFEpython-cherrypy.spec: Bump to 3.0.3

2008-05-16  Albert Lee  <trisk@acm.jhu.edu>

	* SFEwine.spec: Bump to 1.0-rc1
	* patches/wine-02-xim-workaround.diff: Update for 1.0-rc1

2008-05-17  simon.zheng  <simon.zheng@sun.com>

	* SUNWgnome-display-mgr.spec
	* patches/gdm-04-dynamic-display.diff: Rework for gdm 2.22.0.

2008-05-15  Damien Carbery <damien.carbery@sun.com>

	* archive/SUNWlcms.spec: Moved from JDS spec-files-other.
	* SUNWlcms.spec,base-specs/lcms.spec: Deleted as they were merged into
	  one file when used in spec-files-other.

2008-05-15  Michal Bielicki <cypromis@opensolaris.org>

        * SFEstdcxx.spec: update to release 4.2.1

2008-05-14  Michal Bielicki <cypromis@opensolaris.org>

        * SFEunixodbc.soec: fixes for sparc
        * SFExchat: get rid of non existant CBEbison requirement

2008-05-14  Ananth Shrinivas <ananth@sun.com>

	* SFElighttpd.spec: Bump to 1.4.19, Fix %files section

2008-05-14  River Tarnell  <river@wikimedia.org>

	* SFEmutt.spec: Add --enable-hcache, add gdbm dependency

2008-05-13  Halton Huo <nonsea@users.sourceforge.net>

	* SFEgtk-vnc.spec: fix summary
	* SFEpygoocanvas.spec: Bump to 0.10, update %files
	* base-specs/goocanvas.spec: Bump to 0.10

2008-05-13  Halton Huo <nonsea@users.sourceforge.net>

	* SFEguile.spec: Bump to 1.8.5 and update %files
	* patches/guile-01-suncc-inline.diff,